--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   google_maps_flutter: ^1.0.6
   json_serializable: ^3.3.0
 
+  charts_flutter: ^0.9.0
+  carousel_slider: ^2.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
