--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   charts_flutter: ^0.9.0
   carousel_slider: ^2.3.1
   shared_preferences: ^0.5.12+4
+  auto_size_text: ^2.1.0
+  screenshot: ^0.2.0
+  image_gallery_saver: ^1.6.6
+  permission_handler: ^5.0.1+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
